# sammy

./: .gitignore  LICENSE  README.md  hello world  pyproject.toml
examples/: 01_hello.py  02_expressions.py  03_custom_tab.py  04_vision_react.py  06_voice_commands.py  07_body.py
sammy_lib/: __init__.py
sammy_lib/.docu/: README.md  body.md  concept.md  custom_tabs.md  extending.md  transport.md  vision.md
sammy_lib/_engine/: __init__.py  __main__.py  app.py
sammy_lib/_engine/ipc/: frame_server.py  protocol.py  server.py
sammy_lib/_engine/modules/: base.py  body_backend.py  camera_backend.py  ears_backend.py  eye_states.py  eyes_backend.py  mouth_backend.py  ui_backend.py  vision_backend.py
sammy_lib/_engine/ui/: eye_widget.py  main_window.py  taskbar.py
sammy_lib/_engine/ui/elements/: __init__.py  button.py  dropdown.py  label.py  slider.py  text_input.py  toggle.py
sammy_lib/_engine/ui/settings/: body_settings.py  ears_settings.py  eyes_settings.py  mouth_settings.py
sammy_lib/_engine/util/: download.py
sammy_lib/api/: __init__.py  _frames.py  _runtime.py  _transport.py  body.py  ears.py  exceptions.py  eyes.py  mouth.py  robot.py  ui.py
src/: main.py  requirements.txt
