[project]
name = "sammy"
version = "0.1.0"
description = "Programmable robot eyes / mouth / ears / vision for the classroom."
requires-python = ">=3.9,<3.10"
dependencies = [
    "PyQt6>=6.6",
    "opencv-python>=4.9",
    "ultralytics>=8.1",
    "piper-tts>=1.3",
    "vosk>=0.3.45",
    "sounddevice>=0.4.6",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pib*"]
