[project]
name = "sammy"
version = "0.1.0"
description = "Programmable robot eyes / mouth / ears / vision for the classroom."
requires-python = ">=3.9,<3.10"
dependencies = [
    "PyQt6>=6.6",
    # pib-sdk (below) hard-pins numpy==1.26.4 via roboticstoolbox; opencv 4.12+
    # declares numpy>=2, so cap it at the last numpy-1.x-compatible line.
    "opencv-python>=4.9,<4.12",
    "ultralytics>=8.1",
    "piper-tts>=1.3",
    "vosk>=0.3.45",
    "sounddevice>=0.4.6",
    # Real-robot control (arms / hands / head + kinematics) for robot.body.*.
    # PR-1156 is not on PyPI yet; pin to the branch until it's released, then
    # switch to a version spec like "pib-sdk>=0.3". Pulls roslibpy +
    # numpy==1.26.4 / scipy<1.12 / roboticstoolbox / spatialmath.
    "pib-sdk @ git+https://github.com/pib-rocks/pib-sdk@PR-1156",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sammy_lib*"]
